# EZProfile

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindOTF2.cmake
src/: arguments.c  arguments.h  callbacks.c  callbacks.h  datastructures.c  datastructures.h  ezprofile.c  ezprofile.h  main.c
src/hashmap/: hashmap.c  hashmap.h
